cloud/local/development/app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: application-source-service
spec:
  selector:
    app: application-source
  ports:
    # Default port used by the image
    - port: 8080
