cloud/local/development/app/webdav-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webdav-service
spec:
  type: ExternalName
  externalName: webdav-service.webdav.svc.cluster.local
