cloud/local/development/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-source-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /app(/|$)(.*)
            backend:
              service:
                name: application-source-service
                port:
                  number: 8080
